test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  background: false
  rules:
    - name: require-app-label
      match:
        any:
        - resources:
           kinds:
           - Pod
           - Deployment
      validate:
        failureAction: Enforce
        message: Pod must include the 'app=my-app' label
        pattern:
          metadata:
            labels:
              app: my-app
