test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/policy_exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: label-exception
  namespace: default
spec:
  exceptions:
  - policyName: require-app-label
    ruleNames:
    - require-app-label
  match:
    any:
    - resources:
        kinds:
        - Pod
        - Deployment
        namespaces:
        - default
        selector:
         matchLabels:
           app: my-test-app
