test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-test-app
spec:
  containers:
  - name: nginx
    image: nginx
