test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
