test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/01-policy_exception.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policy_exception
spec:
  try:
  - apply:
      file: policy_exception.yaml
