test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/02-resource.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: resource
spec:
  try:
  - apply:
      check:
        (error != null): true
      file: resource.yaml
