test/conformance/chainsaw/policy-validation/cluster-policy/policy-exceptions-disabled/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: policy-exceptions-disabled
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-app-label
  - name: step-01
    try:
    - apply:
        file: policy_exception.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource.yaml
